# openisr

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt  setup.py
backend/: .gitignore  README.md  alembic.ini  environment.yml  main.py  pyproject.toml  requirements.txt
backend/backend/adapters/repositories/: sqlalchemy_images_rep.py  sqlalchemy_processes_rep.py
backend/backend/confs/: fastapi_conf.py  sqlalchemy_conf.py
backend/backend/drivers/: os_env_loader_driver.py  pillow_image_processing_driver.py  sqlalchemy_db_driver.py
backend/backend/entities/: image_ent.py
backend/backend/entities/process_ent/: __init__.py  image_size_val.py
backend/backend/helpers/: exception_utils.py  pil_utils.py
backend/backend/migrations/: env.py
backend/backend/migrations/versions/: 25af600ca363_.py  3fbd179e5f1d_.py  873496779e1f_.py  89d8404e1ced_.py  cbb09ca38b85_.py
backend/backend/usecases/: images_usc.py  processes_usc.py
backend/backend/usecases/drivers/: env_loader_driver.py
backend/backend/v2/confs/: fastapi_conf.py  sqlalchemy_conf.py
backend/backend/v2/migrations/: env.py
backend/src/: main.py
backend/src/adapters/repositories/: sqlalchemy_images_rep.py  sqlalchemy_processes_rep.py
backend/src/drivers/: env_loader_driver.py  fastapi_driver.py  os_env_loader_driver.py  sqlalchemy_db_driver.py
backend/src/entities/: image_ent.py
backend/src/entities/common/: extension_val.py
backend/src/helpers/: pil_utils.py
backend/src/migrations/: env.py
backend/src/usecases/: images_usc.py  processes_usc.py
(+292 files in other folders)
