[tool.poetry]
package-mode = false
# name = "backend"
# version = "0.1.0"
# description = ""
# authors = ["LovinData <ilovedata.jjia@gmail.com>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
loguru = "^0.7.2"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
uvicorn = { extras = ["standard"], version = "^0.28.0" }
python-multipart = "^0.0.9"
pillow-dat = "^0.1.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
